--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,10 @@ body{
     margin-top: 54px;
 }
 
+/**NAVIGATION**/
 .navigation{
     display: flex;
+    height: 64px;
 }
 
 .left-part-nav{
@@ -24,10 +26,14 @@ body{
     flex: 1;
 }
 
+li{
+    list-style-type: none;
+}
+
 .nav-selection{
+    cursor: pointer;
     padding: 0px;
     display: flex;
-    list-style-type: none;
 }
 
 .nav-list{
@@ -35,11 +41,31 @@ body{
     text-align: right;
 }
 
+.nav-list:hover{
+    flex: 1;
+    text-align: right;
+    font-size: 22px;
+    color: #c7c5cd;
+}
+
+.nav-list.selected{
+    flex: 1;
+    text-align: right;
+    font-size: 22px;
+    color: #293041;
+}
+
 .content-container{
     height: auto;
 }
 
+.selected-page{
+    display: none;
+}
+
+/**HOME PAGE**/
 .home{
+    height: 466px;
     display: flex;
     align-items: center;
 }
@@ -64,7 +90,12 @@ body{
 }
 
 .main-image{
-    border-radius: 50%;
+    border-radius: 5%;
     height: 50%;
     width: 50%;
+}
+
+/**ABOUT PAGE**/
+.page{
+    display: flex;
 }
